Resolve distort effect

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -217,15 +217,16 @@ body{
 /*  */
 #jesus{
     position: absolute;
-    z-index: 1000 !important;
+    z-index: 0 !important;
     /* background-color: darkblue; */
     mix-blend-mode: luminosity;
-    width: auto !important;
+    width: 23vw !important;
+    height: 10vw;
     opacity: 0; 
     transition: all 0.2s ease-in-out;
     transform: rotate(-6deg);
     left: 140px;
-    top: -50px;
+    top: -60px;
     cursor: pointer;
     aspect-ratio: 16/9;
 }
@@ -238,8 +239,11 @@ body{
     mix-blend-mode: normal;
 }
 #jesus canvas{
-    width: 350px !important;
-    height: 180px !important;
+    width: 360px !important;
+    height: 210px !important;
+    /* width: 100%; */
+    /* width: 350px !important; */
+    /* height: 180px !important; */
 }
 /*  */
 
